web-infras/parser/tests/fixtures/esprima/ES6/lexical-declaration/invalid_let_for_in/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,20)
1|'use strict'; for (let in z) {}
 |                  ^
